Updating contact icons and fixing spacing error of poster's galleries.

--- a/src/static/css/base/_page.scss
+++ b/src/static/css/base/_page.scss
@@ -40,7 +40,6 @@ body {
 }
 
 .images {
-  margin: 0 0 _size(element-margin) 0;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
